--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/livehealth/Documents/github/iAziz786/guinea-pig-socket/.venv/bin/python2.7"
+    "python.pythonPath": ".venv/bin/python2.7"
 }
